gitops/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-flag
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-targeting
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-evaluation
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-analytics
