gitops/platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: ns-auth
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gvianalourenco.xyz
      secretName: api-tls-auth
  rules:
    - host: api.gvianalourenco.xyz
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-ingress
  namespace: ns-flag
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gvianalourenco.xyz
      secretName: api-tls-flag
  rules:
    - host: api.gvianalourenco.xyz
      http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-ingress
  namespace: ns-targeting
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: $1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gvianalourenco.xyz
      secretName: api-tls-targeting
  rules:
    - host: api.gvianalourenco.xyz
      http:
        paths:
          - path: /targeting(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-ingress
  namespace: ns-evaluation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /evaluate
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gvianalourenco.xyz
      secretName: api-tls-evaluation
  rules:
    - host: api.gvianalourenco.xyz
      http:
        paths:
          - path: /evaluation/evaluate
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  namespace: ns-analytics
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.gvianalourenco.xyz
      secretName: api-tls-analytics
  rules:
    - host: api.gvianalourenco.xyz
      http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
